# PDF-OCR

./: .env.example  .gitignore  Makefile  README.md  start.sh
backend/: pyproject.toml
backend/app/: config.py  main.py  system_info.py
backend/app/api/: download.py  jobs.py  system.py  unlock.py  upload.py
backend/app/formats/: __init__.py  docx.py  markdown.py  searchable_pdf.py  text.py  word_positions.py
backend/app/jobs/: models.py  runtime.py  store.py
backend/app/ocr/: base.py  ocrmypdf_engine.py  paddle_engine.py
backend/app/pipeline/: page_range.py  preprocess.py  runner.py
backend/tests/: conftest.py  test_api_download.py  test_api_jobs.py  test_api_system.py  test_api_unlock.py  test_api_upload.py  test_config.py  test_format_docx.py  test_format_json.py  test_format_markdown.py  test_format_pdf.py  test_format_text.py  test_formats_registry.py  test_health.py  test_job_models.py  test_job_store.py  test_lifespan.py  test_ocr_base.py  test_ocrmypdf_engine.py  test_paddle_engine.py  test_page_range.py  test_preprocess.py  test_runner.py  test_system_info.py
docs/superpowers/plans/: 2026-05-16-ocr-pdf-app.md
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: dropzone.tsx  hardware-chip.tsx  job-options.tsx  progress-panel.tsx  results-panel.tsx  unlock-panel.tsx
frontend/e2e/: upload-flow.spec.ts
frontend/hooks/: use-job-status.ts
frontend/lib/: api.ts  format-matrix.ts  types.ts
frontend/tests/: api.test.ts  format-matrix.test.ts
tool/: gxbk.py
(+1 files in other folders)
