[project]
name = "ocr-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.20",
  "pypdf>=5.1",
  "pdf2image>=1.17",
  "pikepdf>=9.4",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "opencv-python-headless>=4.10",
  "numpy>=2.0",
  "psutil>=6.1",
  "structlog>=24.4",
  "Pillow>=11.0",
  "reportlab>=4.2",
  "ocrmypdf>=16.8",
  "paddleocr>=2.9",
  "paddlepaddle>=2.6",
]

[project.optional-dependencies]
gpu = ["paddlepaddle-gpu>=2.6"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
python-preference = "managed"
